objects/ssot__MailLetterEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionId__c</fullName>
        <label>Engagement Action</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Mail Letter Engagement Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MailLetterId__c</fullName>
        <label>Mail Letter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819805021_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MailLetterEngagement_MailLetterId_ma_rel</label>
        <referenceTo>ssot__MailLetter__dlm</referenceTo>
        <relationshipLabel>MailLetterEngagement_MailLetterId_ma_rel</relationshipLabel>
        <relationshipName>rel_1719819805021_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720024270960_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MailLetterEngagement_EngagementActio_rel</label>
        <referenceTo>ssot__EngagementAction__dlm</referenceTo>
        <relationshipLabel>MailLetterEngagement_EngagementActio_rel</relationshipLabel>
        <relationshipName>rel_1720024270960_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>